Fix alignment

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -1,7 +1,8 @@
 .item-discussion-views {
   font-size: 14px;
   position: absolute;
-  right: 37px;
+  width: 65px;
+  right: 0;
   color: var(--muted-color);
   text-decoration: none;
 
